Merge from main-3 (#5955)
* Update build files for main-3 [skip-ci]

* Update SCDF to use Boot 3.2.2

* Jakarta updates
* Updated for Logging Date Format
* Replace spring.factories with autoconfig imports
* Constructor Bindings removed
* Readd the yaml files that caused the migrator to fail
* Update SCDF to Boot 3.2.2 as parent
* Updated dependencies where needed
* Added versions to some dependencies where versions are no longer in the bom
* Updated hibernate usages where class names changed
* Got to spring-cloud-common-security-config-web.
** The OauthSecurityCOnfiguration has @ConditionalOnMissingBean for the WebSecurityAdapter.
** Which is no longer available.  We need to determine what should go here.
* Update workflows to use Java 17

* Make SCDF and Skipper compilable for boot 3.x

* Replaced SocketUtils with TestSocketUtils
** It was moved to the test package.
* Migrated httpclient to httpclient5
** Removed use of httpclient 4.x dependencies added yesterday
* Updated Types in AuditRecord Entity to use JdbcTypeCode
* Security Modules need to be compiled with Boot3 and securty 6
* Update SCDF to use deployer 3.0.x
* Update SCDF pom files to create Java 17 jars
* Exclude javax.annotation from deployer artifacts.
* Add jakarta annotation dependencies
* Update code from javax to jakarta
* Replaced Entity  @Type with  @JavaTypeCode
* Update JobParam to batch 5.
* Update httpclient package to httpclient5 package

* Update SCDF so that it can be compiled with Boot 3.2.x.  Part 3

Added dataflow specific PageQueryProvider for missing functions

Batch removed some methods that are still required by dataflow.
Created dataflow version of those classes so that we can implement those methods

Added hibernate version

Checkpoint for server core and server

Updated Skipper components

Update classic docs to be restful doc 3.0 compliant

Update code to resolve review comments

Thank you @cbono!!!!

One last polish

* Rem